# thelinuxprogramminginterface

./: .gitignore  CMakeLists.txt  Makefile  depend.sh
chapter02/: CMakeLists.txt  exit.c
chapter03/: CMakeLists.txt  errno.c
chapter04/: CMakeLists.txt  copy.c  seek_io.c  tee.c
chapter05/: CMakeLists.txt  Module.mk  exercise03.c  exercise06.c  t_readv.c
chapter05/exercises/: exercise01.c  exercise02.c  exercise04.c  exercise05.c  exercise07.c
chapter06/: Module.mk  pathname.c
chapter06/exercises/: exercise01.c  exercise02.c  exercise03.c
chapter07/: CMakeLists.txt  ex0701.c  ex0702.c  free_and_sbrk.c
chapter10/: CMakeLists.txt  calendar_time.c  show_time.c  t_time.c
chapter13/: CMakeLists.txt  direct_read.c  tail.c  test_direct_access.c
chapter14/: CMakeLists.txt  t_mount.c
chapter18/: CMakeLists.txt  t_unlink.c
chapter20/: CMakeLists.txt  t_signal.c
chapter44/: CMakeLists.txt  t_fifo.c
fileio/: CMakeLists.txt  bad_exclusive_open.c
include/: allhead.h  error_functions.h  get_num.h
lib/: CMakeLists.txt  allhead.h  ename.c.inc  error_functions.c  get_num.c  get_num.h
