CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(TheLinuxProgrammingInterface)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -std=c11")

INCLUDE_DIRECTORIES(include)
ADD_SUBDIRECTORY(chapter02)
ADD_SUBDIRECTORY(chapter04)
ADD_SUBDIRECTORY(chapter05)
ADD_SUBDIRECTORY(chapter06)
ADD_SUBDIRECTORY(fileio)
ADD_SUBDIRECTORY(lib)
