CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(TheLinuxProgrammingInterface)
# for clang call 'CC=/usr/bin/clang cmake ..'
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -g -std=c11")

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(chapter02)
ADD_SUBDIRECTORY(chapter04)
ADD_SUBDIRECTORY(chapter05)
ADD_SUBDIRECTORY(chapter06)
ADD_SUBDIRECTORY(chapter07)
ADD_SUBDIRECTORY(chapter10)
ADD_SUBDIRECTORY(chapter13)
ADD_SUBDIRECTORY(chapter18)
ADD_SUBDIRECTORY(chapter20)
ADD_SUBDIRECTORY(fileio)
